--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -6,7 +6,7 @@
 
         <div class="form-group">
           <%= f.label :name %>
-          <%= f.text_field :name, autofocus: true, class: "form-control" %></div>
+          <%= f.text_field :username, autofocus: true, class: "form-control" %></div>
 
         <div class="form-group">
           <%= f.label :email %>
