--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -19,7 +19,7 @@
           <% @users.each_with_index do |user, index| %>
               <tr>
                 <td><%= index +=1 %></td>
-                <td><%= user.name %></td>
+                <td><%= user.username %></td>
                 <td>
                   <%= link_to "Send Message", "#", class: "btn btn-success btn-xs start-conversation",
                               "data-sid" => current_user.id, "data-rip" => user.id %>
@@ -42,9 +42,7 @@
                 <li class="media">
                   <%= image_tag("http://placehold.it/50x50", class: "media-object pull-left") %>
                   <div class="media-body">
-                    <%= link_to "", conversation_path(conversation), class: "conversation", "data-cid" => conversation.id %>
-                        <h4 class="media-heading"><%= conversation_interlocutor(conversation).name %></h4>
-                        <p><%= conversation.messages.last.nil? ? "No messages" : truncate(conversation.messages.last.body, length: 45) %></p>
+                        <h4 class="media-heading"><%= conversation_interlocutor(conversation).username %></h4>
                   </div>
                 </li>
 
